[package]
name = "rusty8"
version = "0.1.0"
authors = ["Mike Mallin <mike@mremallin.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
    version = "0.34"
    default-features = false
    features = ["mixer"]

[dependencies]
rand = "0.8.4"
variant_count = "1.1.0"